fixed spacing

--- a/Styles.css
+++ b/Styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .profile {
-    padding-top: 3%;
+    padding-top: 6%;
 }
 
 .profile img{
@@ -31,6 +31,7 @@ h1 {
 
 h2 {
     text-align: center;
+    padding-bottom: 2%;
 }
 
 .codelink {
@@ -38,12 +39,12 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     background-color: aqua;
-    margin-top: 1%;
+    margin-top: 2%;
     text-align: center;
     width: 80%;
     padding-top: 0.5%;
     padding-bottom: 0.5%;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .codelink p {
